# ddns

./: .gitignore  Makefile  Makefile.am  README  autogen.sh  configure.ac  ddns.conf  ddns.conf.sample  ddns.in  ddns.py
.tx/: config
ddns/: __init__.py  errors.py  i18n.py  providers.py  system.py
man/: custom-html.xsl  ddns.conf.xml  ddns.xml
po/: LINGUAS  POTFILES.in  ar.po  ca.po  cs_CZ.po  da.po  ddns.pot  de.po  el_GR.po  es.po  fa.po  fr.po  hr.po  hu.po  id.po  it.po  ja.po  jv.po  km_KH.po  nl.po  pl.po  pt.po  pt_BR.po  pt_PT.po  ro.po  ro_RO.po  ru.po  rw.po  sk.po  sq.po  sr.po  su.po  sv.po  th.po  tk.po  tr.po  uk.po  uz@Latn.po  vi.po  zh.po
src/ddns/: __init__.py  __version__.py.in  database.py  errors.py  i18n.py  providers.py  system.py
src/systemd/: ddns.service.in  ddns.timer
